--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="1695138368134.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1> praseeman S</h1>
-            <p> am Data science student </p>
+            <img src="DSC_2023.jpg" alt="Your Profile Picture" class="profile-picture">
+            <h1> Riswan M</h1>
+            <p> am BCA student </p>
         </div>
     </header>
 
@@ -115,7 +115,7 @@
     <section id="about">
         <div class="section-content">
             <h2>About Me</h2>
-            <p>I'm a <b>Data science atudent </b> Iam data science student i learning about how the data science is going to change this world differently. Iam a quick learner in coding iam good in coding lanhuages in python and sql</p>
+            <p>I'm a <b>BCA Student </b> Iam BCA student i learning about how the data science is going to change this world differently. Iam a quick learner in coding iam good in coding languages in python and sql</p>
 
         </div>
     </section>
@@ -162,14 +162,14 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="PRASEEMAN RESUME.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="Rishwan CV.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
     </section>
 
     <footer>
-        <p>&copy; 2025 praseeman S</p>
+        <p>&copy; 2025 Rishwan M</p>
     </footer>
 
     <script>
